[package]
name = "read-primitives"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "read-primitives provides traits to read primitive types from any type that implements std::io::Read"
repository = "https://github.com/heberlein/read-primitives"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.11"
